Simplify break structure for string switches (#544)
* feat: Simplify break structure for string switches

As a reference, this is found in TestEclipseSwitchString.

Signed-off-by: aoqia <aoqia@aoqia.dev>
(cherry picked from commit cedf7038ae024272afb1df281a6fbb8fb9e6871d)

* style: Use 2 spaces indent

Signed-off-by: aoqia <aoqia@aoqia.dev>

* feat: Improve exit helper break structure

Signed-off-by: aoqia <aoqia@aoqia.dev>

* fix: Prevent if statements without a basichead from being processed

Signed-off-by: aoqia <aoqia@aoqia.dev>

* style: Remove left-in note tag

Co-authored-by: Jasmine Karthikeyan <25208576+jaskarth@users.noreply.github.com>

* refactor: Change variable names and comments for clarity

Signed-off-by: aoqia <aoqia@aoqia.dev>

* docs(code): Clean up some code comments

Signed-off-by: aoqia <aoqia@aoqia.dev>

* style: Invert if guard for parity with rest of func

Signed-off-by: aoqia <aoqia@aoqia.dev>

* chore: Add null check and nullable

Signed-off-by: aoqia <aoqia@aoqia.dev>

---------

Signed-off-by: aoqia <aoqia@aoqia.dev>
Co-authored-by: Jasmine Karthikeyan <25208576+jaskarth@users.noreply.github.com>